# QMitigate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.cache/clangd/index/: benchmark_engine.cpp.3C812FD472717463.idx  gates.cpp.3C71599BE8213AE2.idx  gates.hpp.C663FC58712301FD.idx  noise_model.cpp.150CE711F0798B6C.idx  noise_model.hpp.895FB77DB3FC2C16.idx  python_bindings.cpp.DAB3B07AEB535AD0.idx  quantum_state.cpp.02CF17587F619FE3.idx  quantum_state.hpp.E689F37B1CF737DC.idx  simulator.cpp.AB0427D703776C44.idx  simulator.hpp.9E5B7FC1315EC5A2.idx  test_gates.cpp.E3E44E394B38D515.idx  test_noise_model.cpp.215712DF536A0200.idx  test_quantum_state.cpp.8E9164CCA46156D2.idx  test_simulator.cpp.7529EFB1ACAE109F.idx  types.hpp.DE03A5D03C017376.idx
benchmarks/: benchmark_engine.cpp
cmake/: QMitigateConfig.cmake.in
include/qmitigate/: gates.hpp  noise_model.hpp  quantum_state.hpp  simulator.hpp  types.hpp
notebooks/: Demo_ZNE_Correction.ipynb  QMitigate_Guide.ipynb
python/qmitigate/: __init__.py  benchmarks.py  zne.py
src/: gates.cpp  noise_model.cpp  python_bindings.cpp  quantum_state.cpp  simulator.cpp
tests/: test_zne.py
tests/unit/: test_gates.cpp  test_noise_model.cpp  test_quantum_state.cpp  test_simulator.cpp
