[build-system]
requires = ["setuptools>=61.0", "pybind11>=2.10.0", "cmake>=3.16"]
build-backend = "setuptools.build_meta"

[project]
name = "qmitigate"
version = "1.0.0"
description = "High-Performance Quantum Error Mitigation Engine"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Shubham Gautam"}
]
keywords = ["quantum", "computing", "simulation", "error-mitigation", "ZNE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "matplotlib>=3.5",
    "jupyter>=1.0",
]
qiskit = [
    "qiskit>=0.45",
    "qiskit-aer>=0.13",
]

[project.urls]
Homepage = "https://github.com/yourusername/QMitigate"
Documentation = "https://github.com/yourusername/QMitigate#readme"
Repository = "https://github.com/yourusername/QMitigate"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
